force-app/main/default/objects/openq__Payment__c/fields/openq__Event__c.field-meta.xml
<CustomField>
    <fullName>openq__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>openq__Event__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>