force-app/main/default/objects/openq__Payment__c/fields/openq__Event_Speaker_ID__c.field-meta.xml
<CustomField>
    <fullName>openq__Event_Speaker_ID__c</fullName>
    <label>Event Speaker ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>