force-app/main/default/objects/openq__Payment__c/fields/openq__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>openq__Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>