force-app/main/default/objects/openq__Payment__c/fields/openq__Status__c.field-meta.xml
<CustomField>
    <fullName>openq__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Projected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>